@@ -1,12 +1,26 @@
+from compiler import parse
+
 from z3c.pt.expressions import PathTranslator
 from z3c.pt.expressions import ExistsTranslator
 from z3c.pt.expressions import ZopeExistsTraverser
 from z3c.pt.expressions import ProviderTranslator
+from chameleon.zpt.expressions import PythonTranslator
+from chameleon.core import types
+from sourcecodegen import generate_code
 
 from Acquisition import aq_base
 from OFS.interfaces import ITraversable
 from Products.PageTemplates import ZRPythonExpr
 from zExceptions import NotFound, Unauthorized
+from RestrictedPython.RestrictionMutator import RestrictionMutator
+from RestrictedPython import MutatingWalker
+from RestrictedPython.Guards import safe_builtins
+
+from AccessControl.ZopeGuards import guarded_getattr
+from AccessControl.ZopeGuards import guarded_getitem
+from AccessControl.ZopeGuards import guarded_apply
+from AccessControl.ZopeGuards import guarded_iter
+from AccessControl.ZopeGuards import protected_inplacevar
 
 from zope import component
 from zope.proxy import removeAllProxies
@@ -121,6 +135,50 @@ class FiveContentProviderTraverser(object):
 class FiveProviderTranslator(ProviderTranslator):
     content_provider_traverser = FiveContentProviderTraverser()
 
+
+class FivePythonTranslator(PythonTranslator):
+    rm = RestrictionMutator()
+
+    secured = {
+        '_getattr_': guarded_getattr,
+        '_getitem_': guarded_getitem,
+        '_apply_': guarded_apply,
+        '_getiter_': guarded_iter,
+        '_inplacevar_': protected_inplacevar,
+    }
+
+    def translate(self, string, escape=None):
+        """We use the ``parser`` module to determine if
+        an expression is a valid python expression.
+
+        Make sure the formatted syntax error exception contains the
+        expression string.
+
+        >>> from traceback import format_exc
+        >>> translate = PythonTranslator().translate
+        >>> try: translate('abc:def:ghi')
+        ... except SyntaxError, e: 'abc:def:ghi' in format_exc(e)
+        True
+        """
+
+        if isinstance(string, unicode):
+            string = string.encode('utf-8')
+
+        if string:
+            expression = string.strip()
+            node = parse(expression, 'eval').node
+            MutatingWalker.walk(node, self.rm)
+            string = generate_code(node)
+
+            if isinstance(string, str):
+                string = string.decode('utf-8')
+
+            value = types.value(string.strip())
+            value.symbol_mapping.update(self.secured)
+
+            return value
+
+python_translator = FivePythonTranslator()
 path_translator = PathTranslator()
 exists_translator = ExistsTranslator()
 provider_translator = FiveProviderTranslator()
