@@ -1,0 +1,4 @@
+<div xmlns="http://www.w3.org/1999/xhtml"
+     xmlns:tal="http://xml.zope.org/namespaces/tal">
+  <span tal:replace="python: modules['cgi'].escape(view.tagsoup())" />
+</div>
