@@ -1,7 +1,7 @@
 [versions]
 chameleon.core = 1.0.4
 chameleon.zpt = 1.1.3
-Chameleon = 1.2.3
+Chameleon = 1.3.0-rc1
 z3c.pt = 1.2.1
 zope.testing = 3.7.1
 zope.i18n = 3.6.0
